Also test py3 (and 32/64) on AppVeyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,15 @@
 environment:
-  global:
-    PYTHON: "C:\\Python27"
+  matrix:
+    - PYTHON: "C:\\Python27"
+    - PYTHON: "C:\\Python27-x64"
+    - PYTHON: "C:\\Python34"
+    - PYTHON: "C:\\Python34-x64"
+    - PYTHON: "C:\\Python35"
+    - PYTHON: "C:\\Python35-x64"
+    - PYTHON: "C:\\Python36"
+    - PYTHON: "C:\\Python36-x64"
+    - PYTHON: "C:\\Python37"
+    - PYTHON: "C:\\Python37-x64"
 
 # https://www.appveyor.com/docs/how-to/rdp-to-build-worker/
 init:
