--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,13 @@
 language: python
 
-dist: xenial
-
 python:
     - 2.7
     - 3.5
     - 3.6
-    - 3.7
 
 install:
-    - pip install pyserial
     - git submodule update --init --recursive
-    - python setup.py install
+    - pip install .
 
 script: python -m unittest discover -v sunspec
 
