--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,18 @@
 language: python
 
+dist: xenial
+
 python:
     - 2.7
     - 3.5
     - 3.6
+    - 3.7
+    - 3.8
 
 install:
+    - pip install pyserial
     - git submodule update --init --recursive
-    - pip install .
+    - python setup.py install
 
 script: python -m unittest discover -v sunspec
 
